# cc-agent-messenger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  SETUP.ja.md  SETUP.md  USAGE.ja.md  USAGE.md
docs/design/: commands-hld.md  mobile-bot-mention.md  sender-display-name.md
src/cc_agent_messenger/: __init__.py  agentrunner.py  audit.py  authz.py  cli.py  commands.py  config.py  context.py  cursor.py  daemon.py  doctor.py  egress.py  heartbeat.py  ingress.py  ipcclient.py  killswitch.py  lifecycle.py  models.py  monitors.py  multiagent.py  profile.py  receipts.py  router.py  sendapi.py  session.py  slackclient.py  thinking.py
src/cc_agent_messenger/assets/: config.example.toml  profile.example.json  settings.snippet.json
src/cc_agent_messenger/assets/skill/: SKILL.md
src/claude_messenger/: __init__.py  cli.py  commands.py  config.py  context.py  daemon.py  doctor.py  ingress.py  killswitch.py  lifecycle.py  multiagent.py  router.py  sendapi.py  slackclient.py
src/claude_messenger/assets/: config.example.toml  settings.snippet.json
src/claude_messenger/assets/skill/: SKILL.md
tests/: _helpers.py  test_agents.py  test_audit.py  test_c1.py  test_c1_live.py  test_cli.py  test_commands_surfaces.py  test_config.py  test_cursor.py  test_doctor_lifecycle.py  test_egress.py  test_heartbeat.py  test_ingress.py  test_killswitch.py  test_monitors.py  test_multiagent.py  test_profile.py  test_receipts.py  test_sendapi.py  test_slackclient.py  test_thinking.py
