[project]
name = "claude-messenger"
version = "0.1.0"
description = "Slack message-turn bridge to AI coding agents (Claude Code / Codex / Copilot) running on your Mac"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Noboru Harada" }]
keywords = ["slack", "claude-code", "codex", "copilot", "ai-agent", "bot", "socket-mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "slack_sdk>=3.27",
    "slack_bolt>=1.18",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
claude-messenger = "claude_messenger.cli:main"

[project.urls]
Homepage = "https://github.com/REPLACE-OWNER/claude-messenger"
Issues = "https://github.com/REPLACE-OWNER/claude-messenger/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_messenger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
