[project]
name = "cc-agent-messenger"
version = "0.5.0"
description = "Slack message-turn bridge to AI coding agents (Claude Code / Codex / Copilot) running on your Mac"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Noboru Harada", email = "noboru@ieee.org" }]
maintainers = [{ name = "Noboru Harada", email = "noboru@ieee.org" }]
keywords = ["slack", "claude-code", "codex", "copilot", "ai-agent", "bot", "socket-mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "slack_sdk>=3.27",
    "slack_bolt>=1.18",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
cc-agent-messenger = "cc_agent_messenger.cli:main"

[project.urls]
Homepage = "https://github.com/noboru2000/cc-agent-messenger"
Issues = "https://github.com/noboru2000/cc-agent-messenger/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cc_agent_messenger"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
